--- a/roles/01_common/tasks/main.yml
+++ b/roles/01_common/tasks/main.yml
@@ -1,105 +1,83 @@
 ---
-# Nhiệm vụ của role này: Cài đặt các gói cơ bản và đồng bộ thời gian
+# ============================================================
+# Role: 01_common
+# Mục tiêu: Cập nhật hệ thống, bật cập nhật tự động, cài đặt gói cơ bản và đồng bộ thời gian
+# Mapping PCI-DSS: Requirement 6 (Patch Management), 10 (Time sync)
+# ============================================================
 
-# --- Auto-updates (PCI Req 6) ---
-- name: Ensure unattended-upgrades package is installed
+- name: Update apt cache and upgrade all packages
   ansible.builtin.apt:
-    name: unattended-upgrades
+    update_cache: yes
+    upgrade: dist
+  tags: [common, pci6]
+  # Cập nhật danh sách gói và nâng cấp hệ thống lên bản mới nhất (dist-upgrade)
+
+- name: Install base packages
+  ansible.builtin.apt:
+    name:
+      - unattended-upgrades     # Tự động cập nhật bản vá bảo mật
+      - apt-listchanges         # Hiển thị thay đổi khi cập nhật
+      - cron                    # Hỗ trợ tác vụ định kỳ
+      - chrony                  # Đồng bộ thời gian hệ thống
+      - vim                     # Trình soạn thảo tiện dụng
+      - curl                    # Dụng cụ tải dữ liệu HTTP
+      - gnupg                   # Quản lý khóa GPG
+      - lsb-release             # Lấy thông tin phiên bản OS
+      - ca-certificates         # Chứng chỉ CA gốc
     state: present
     update_cache: yes
-  tags: [common, updates]
+  tags: [common, pci6, pci10]
 
-- name: Enable unattended-upgrades service
+- name: Enable automatic security updates (unattended-upgrades)
   ansible.builtin.copy:
     dest: /etc/apt/apt.conf.d/20auto-upgrades
     content: |
       APT::Periodic::Update-Package-Lists "1";
+      APT::Periodic::Download-Upgradeable-Packages "1";
+      APT::Periodic::AutocleanInterval "7";
       APT::Periodic::Unattended-Upgrade "1";
     mode: '0644'
-  tags: [common, updates]
+  tags: [common, pci6]
+  # Cấu hình chu kỳ tự động kiểm tra và cài bản vá bảo mật
 
-- name: Configure unattended-upgrades for security patches
-  ansible.builtin.lineinfile:
-    path: /etc/apt/apt.conf.d/50unattended-upgrades
-    regexp: '^\s*//\s*"\${distro_id}:\${distro_codename}-security";'
-    line: '"\${distro_id}:\${distro_codename}-security";'
-    backrefs: yes
-  tags: [common, updates]
+- name: Configure unattended-upgrades to only install security updates
+  ansible.builtin.copy:
+    dest: /etc/apt/apt.conf.d/50unattended-upgrades
+    content: |
+      Unattended-Upgrade::Allowed-Origins {
+        "${distro_id}:${distro_codename}-security";
+      };
+      Unattended-Upgrade::AutoFixInterruptedDpkg "true";
+      Unattended-Upgrade::Remove-Unused-Dependencies "true";
+      Unattended-Upgrade::Mail "";
+      Unattended-Upgrade::MailOnlyOnError "true";
+    mode: '0644'
+  tags: [common, pci6]
+  # Chỉ bật cập nhật cho nhánh "security" của Ubuntu/Debian
 
-# --- Time-sync (PCI Req 10) ---
-- name: Install chrony
-  ansible.builtin.apt:
-    name: chrony
-    state: present
-  tags: [common, time, repo]
-
-- name: Ensure chrony service is enabled and started
+- name: Ensure chrony service is enabled and running
   ansible.builtin.service:
     name: chrony
     state: started
     enabled: yes
-  tags: [common, time, repo]
+  tags: [common, pci10]
+  # Bật và khởi động dịch vụ đồng bộ thời gian chrony
 
-# --- Unused-services (PCI Req 2, 6) ---
-- name: Stop and disable unused services
-  ansible.builtin.service:
-    name: "{{ item }}"
-    state: stopped
-    enabled: no
-  loop: "{{ unused_packages_list }}"
-  ignore_errors: yes
-  tags: [common, services]
+- name: Configure chrony to use public NTP pool
+  ansible.builtin.lineinfile:
+    path: /etc/chrony/chrony.conf
+    regexp: '^pool'
+    line: 'pool pool.ntp.org iburst'
+    insertafter: BOF
+  notify: Restart chrony
+  tags: [common, pci10]
+  # Thay thế cấu hình NTP server mặc định bằng pool.ntp.org
 
-- name: Remove unused packages completely
-  ansible.builtin.apt:
-    name: "{{ unused_packages_list }}"
-    state: absent
-    autoremove: yes
-    purge: yes
-  loop: "{{ unused_packages_list }}"
-  tags: [common, services]
+- name: Ensure apt-daily timer is active (systemd)
+  ansible.builtin.systemd:
+    name: apt-daily.timer
+    enabled: yes
+    state: started
+  tags: [common, pci6]
+  # Bật timer của systemd để apt tự động kiểm tra gói cập nhật mỗi ngày
 
-# --- Package signing & repo hardening (PCI Req 6) (LOGIC ĐÃ SỬA) ---
-
-- name: "[RepoFix] Step 1: Temporarily revert all sources to HTTP"
-  # Đảm bảo chúng ta dùng HTTP để có thể chạy apt update/install
-  ansible.builtin.replace:
-    path: /etc/apt/sources.list.d/ubuntu.sources
-    regexp: '(URIs:\s+)https://' # Tìm HTTPS
-    replace: '\1http://'       # Thay bằng HTTP
-    backup: no
-  tags: [common, repo, pci6]
-  
-- name: '[RepoFix] Step 1.5: Switch from broken (VN) mirror to main archive'
-  # vn.archive.ubuntu.com đang báo lỗi SSL certificate name mismatch.
-  # Chúng ta sẽ chuyển sang mirror chính (archive.ubuntu.com)
-  ansible.builtin.replace:
-    path: /etc/apt/sources.list.d/ubuntu.sources
-    regexp: 'vn.archive.ubuntu.com'
-    replace: 'archive.ubuntu.com'
-  tags: [common, repo, pci6]
-
-- name: "[RepoFix] Step 2: Run apt update (over HTTP)"
-  # Chạy apt update trên HTTP để tìm các gói
-  ansible.builtin.apt:
-    update_cache: yes
-  tags: [common, repo, pci6]
-
-- name: "[RepoFix] Step 3: Install HTTPS transport and CA certificates for APT"
-  # Bây giờ mới cài các gói HTTPS
-  ansible.builtin.apt:
-    name:
-      - apt-transport-https # <--- ĐÃ SỬA LỖI TYPO
-      - ca-certificates
-    state: present
-  tags: [common, repo, pci6]
-
-- name: "[RepoFix] Step 4: Ensure all APT sources use HTTPS (deb822 format)"
-  # Bây giờ, đổi lại sang HTTPS (vì đã cài gói)
-  ansible.builtin.replace:
-    path: /etc/apt/sources.list.d/ubuntu.sources
-    regexp: '(URIs:\s+)http://'
-    replace: '\1https://'
-    backup: yes
-  notify: Update apt cache # Gọi handler để chạy apt update (lần cuối qua HTTPS)
-  tags: [common, repo, pci6]
