--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,11 @@
 [geth_nodes]
-# Định nghĩa host 'geth_vm' với IP và user mặc định để kết nối
 geth_vm ansible_host=192.168.0.111 ansible_user=geth
 
+[control]
+ansible_server ansible_host=192.168.0.112 ansible_user=ansible
 
 [all:vars]
-# Biến này cho Ansible biết trình thông dịch Python ở đâu trên máy Ubuntu target
 ansible_python_interpreter=/usr/bin/python3
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+# Lưu ý: đảm bảo public key của user 'ansible' có trên geth_vm trước khi tắt password auth.
+
